# healthy-mcu

./: CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  healthy-mcu.c  idf_component.yml
main/adc/: adc.c  adc.h
main/global/: vars.c  vars.h
main/gpio/: gpio.c  gpio.h  pwm.c  pwm.h
main/hx/: 710b.c  710b.h  711.c  711.h
main/max/: algorithm.c  algorithm.h  blood.c  blood.h  max30102.c  max30102.h  myi2c.c  myi2c.h
main/sc/: sr04.c  sr04.h
main/sppbt/: spp_client.c  spp_client.h
main/tasks/: task.c  task.h
main/uart/: uart.c  uart.h
main/util/: delay.c  delay.h
main/wendu/: hongwai.c  hongwai.h
